Added caching for GET users/id, validation for POST /users
