# src/controllers/user.controller.ts
@@ -1,6 +1,6 @@
-import { Get, Path, Route, Tags } from 'tsoa';
+import { Get, Path, Post, Route, Tags, Body } from 'tsoa';
 import UserService from '../services/user.service';
-import RedisService from '../services/redis.service'
+import RedisService from '../services/redis.service';
 
 @Route("users")
 @Tags("User")
@@ -25,23 +25,63 @@ export default class UserController {
                         console.log(`got back to user.controller/getUsers`);
                         return resp;
                     })
+
                     //cache the resp since it wasn't already in redis
                     .then(function(users) {
-                        console.log(`users found: ${users[0].name}`);
-                        let cacheSuccessful = RedisService.cacheInRedis('users', users);
-                        if(!!cacheSuccessful) {
-                            console.log(`users cached successfully: ${cacheSuccessful}`);
-                        }
-                        return users;
+                        //on the off chance we have no users (yet)
+                        if(!users) return null;
+
+                        console.log(`users found: ${users[0].email}`);
+                        return RedisService.cacheInRedis('users', users)
+                            .then( async function(cacheSuccessful) {
+                                if(!!cacheSuccessful) return users;
+
+                                console.log(`users cached successfully: ${cacheSuccessful}`);
+                                return users;
+                            });
                     });
             });
-        };
-
+    }
         
 
     @Get("/:id")
     public async getUser(@Path() id: string) {
         console.log(`in user.controller/getUser(id=${id})`);
-        return UserService.readById(Number(id));
+        return await RedisService.checkCache(`user:${id}`)
+            .then( async function(cachedUser) {
+
+                //return the redis cache if found
+                if(!!cachedUser) {
+                    console.log(`cachedUser: ${JSON.stringify(cachedUser)}`);
+                    return cachedUser;
+                }
+                //call the service if not found
+                console.log(`did not find user id=${id} in redis Cache`);
+                return UserService.readById(Number(id))
+                    .then( function(resp) { 
+                        console.log(`got back to user.controller/getUser`);
+                        return resp;
+                    })
+                    //cache the resp since it wasn't already in redis
+                    .then(function(user) {
+                        //in case the user id was not found
+                        if(!user) return null;
+
+                        console.log(`user found: ${user.id}`);
+                        return RedisService.cacheInRedis(`user:${user.id}`, user)
+                            .then( async function(cacheSuccessful) {
+                                if(!!cacheSuccessful) return user;
+
+                                console.log(`user id=${user.id} cached successfully: ${cacheSuccessful}`);
+                                return user;
+                            });
+                    });
+                })
+    }
+
+    @Post("/")
+    public async createUser(@Body() body: any) {
+        console.log(`in user.controller/post with body=${body}`);
+        return UserService.create(body);
     }
 }
